--- a/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{LevelChangeDisplay}
 \paragraph*{Typ}
-Composable.
+\texttt{Composable}.
 \paragraph*{Beschreibung}
 Diese Klasse stellt über Compose eine Schaltfläche zum Wechseln der angezeigten Etage bereit.\\
 Die Schaltfläche besteht aus:
