--- a/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
@@ -1,8 +1,8 @@
 \subsubsection{MapObjectInfoDisplay}
 \paragraph*{Typ}
-Composable.
+\texttt{Composable}.
 \paragraph*{Beschreibung}
-Dieses Composable zeigt Informationen zum ausgewählten Kartenobjekt an.\\
+Dieses \texttt{Composable} zeigt Informationen zum ausgewählten Kartenobjekt an.\\
 Es gibt zwei verschiedene Anzeigemodi:
 
 \subparagraph*{Kompakte Anzeige}
