--- a/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
@@ -1,8 +1,8 @@
 \subsubsection{MapScreen}
 \paragraph*{Typ}
-Composable.
+\texttt{Composable}.
 \paragraph*{Beschreibung}
-Dieses Composable ist für den Aufbau der Ansicht des Kartenmodus verantwortlich.
+Dieses \texttt{Composable} ist für den Aufbau der Ansicht des Kartenmodus verantwortlich.
 Dies beinhaltet das Anzeigen der Karte und der Schaltflächen zur Kartensteuerung.\\
 Dazu ist folgendes nötig:
 \begin{itemize}
@@ -64,7 +64,7 @@ wird die letzte Position angezeigt, sofern nicht eine bestimmte Position angezei
 (siehe Beobachtete Daten: getFocusedPos).
 
 \paragraph*{Beobachtete Daten}
-Dieses Composable beobachtet einen MapDisplayDataProvider. 
+Dieses \texttt{Composable} beobachtet einen MapDisplayDataProvider. 
 Eine Änderung der Daten wirkt sich wie folgt aus:
 \begin{itemize}
     \item getTileSource: Die Karte, die von der MapView angezeigt wird, wird mit den neuen 
