--- a/Kapitel/02_App/03_Map/02_ViewModel/IMapObjectInfoController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/IMapObjectInfoController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{IMapObjectInfoController}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Dieses Interface definiert eine Schnittstelle, die alle Daten bereitstellt, 
 die zum Anzeigen der Informationen zu einem Kartenobjekt benötigt werden. 
