--- a/Kapitel/02_App/03_Map/02_ViewModel/LevelChangeController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/LevelChangeController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{LevelChangeController}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Dieses Interface definiert die Schnittstelle zwischen View und ViewModel, über die 
 der Etagenmodus gesteuert wird.\\
