--- a/Kapitel/02_App/03_Map/02_ViewModel/MapDisplayDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapDisplayDataProvider/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{MapDisplayDataProvider}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Dieses Interface ist eine Schnittstelle für Lade- und Speicheroperationen zur angezeigten Karte.\\
 Klassen dieses Interfaces können von einem Beobachter beobachtet werden. Dazu werden 
