--- a/Kapitel/02_App/03_Map/02_ViewModel/MapLayerDataController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapLayerDataController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{MapLayerDataController}
 \paragraph*{Typ} 
-Interface
+\texttt{Interface}
 \paragraph*{Beschreibung}
 Dieses Interface definiert eine Schnittstelle, die Daten für eine Kartenebene bereitstellt.
 Implementierende Klassen können von einem Beobachter beobachtet werden. Dazu werden die 
