--- a/Kapitel/02_App/03_Map/02_ViewModel/MapObjectInfoController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapObjectInfoController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{MapObjectInfoController}
 \paragraph*{Typ}
-Implementiert IMapObjectInfoController.
+Implementiert \texttt{IMapObjectInfoController}.
 \paragraph*{Beschreibung}
 Diese Klasse implementiert die IMapObjectInfoController Schnittstelle und bezieht die Daten 
 dafür aus einem IMapDataProvider und einem IAliasDataProvider.
