--- a/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{MapDataProvider}
 \paragraph*{Typ}
-Implementiert IMapDataProvider.
+Implementiert \texttt{IMapDataProvider}.
 \paragraph*{Beschreibung}
 Diese Klasse implementiert die Fassade IMapDataProvider für die Model-Schicht der Karte.\\
 Ein MapDataProvider besitzt eine Instanz der Klassen 
