--- a/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
@@ -1,8 +1,8 @@
 \subsubsection{AddAliasScreen}
 \paragraph*{Typ}
-Composable.
+\texttt{Composable}.
 \paragraph*{Beschreibung}
-Dieses Composable stellt eine grafische Benutzerschnittstelle bereit.
+Dieses \texttt{Composable} stellt eine grafische Benutzerschnittstelle bereit.
 Mit dieser kann der Benutzer einen neuen Alias lokal hinzufügen oder global vorschlagen.\\
 Beim Erstellen eines AddAliasScreens durch die Navigation erhält dieser die MapId 
 des ausgewählten Kartenobjekts, zu dem ein Alias erstellt werden soll (siehe Navigation).\\
