--- a/Kapitel/02_App/04_AddAlias/Klassen/AliasDataProvider/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AliasDataProvider/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{AliasDataProvider}
 \paragraph*{Typ}
-Implementiert IAliasDataProvider.
+Implementiert \texttt{IAliasDataProvider}.
 \paragraph*{Beschreibung}
 Der AliasDataProvider ist eine Fassade des Models. 
 Dahinter verbirgt er Funktionalität zum Lesen, Modifizieren, Vorschlagen und Löschen von Aliassen.\\
