--- a/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{IAddAliasController}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Der IAddAliasController stellt Methoden bereit um einen Alias bez. Alias-Vorschlag hinzuzufügen. 
 Außerdem stellt er existierende Aliasse bereit.
@@ -59,7 +59,7 @@ Gibt eine Liste aller globalen Aliasse eines Kartenobjekts zurück.
 %-----------------------------------------------
 \subsubsection{AddAliasController}
 \paragraph*{Typ}
-Implementiert IAddAliasController.
+Implementiert \texttt{IAddAliasController}.
 \paragraph*{Beschreibung}
 Der AddAliasController stellt Methoden bereit um einen Alias bez. Alias-Vorschlag hinzuzufügen. 
 Außerdem stellt er existierende Aliasse bereit.\\
