--- a/Kapitel/02_App/04_AddAlias/Klassen/IAliasDataProvider/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/IAliasDataProvider/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{IAliasDataProvider}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Der IAliasDataProvider ist eine Schnittstelle, die eine Fassade des Models ist. 
 Dahinter verbirgt er Funktionalität zum Lesen, Modifizieren, Vorschlagen und Löschen von Aliassen.
