--- a/Kapitel/02_App/05_Search/Klassen/SearchController/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{ISearchController}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Dieses Interface ermöglicht die Suche nach Gebäuden und Räumen zu dem gegebenen String. 
 Es ermöglicht die Bestimmung der MapId zu einem ausgewählten, gültigen Suchbegriff. 
@@ -51,6 +51,6 @@ Fordert die Speicherung des ausgewählten Suchvorschlags von einer Klasse, die I
 
 \subsubsection{SearchController}
 \paragraph*{Typ}
-Implementiert ISearchController.
+Implementiert \texttt{ISearchController}.
 \paragraph*{Beschreibung}
 Klasse zur Suche nach Kartenobjekten und Anzeigen dieser in der Karte.
