--- a/Kapitel/02_App/05_Search/Klassen/SearchModel/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchModel/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{ISearchModel}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Dieses Interface ermöglicht das Durchsuchen der Datenbank nach gültigen Suchbegriffen zu einem gegebenen String.
 Es ermöglicht die Bestimmung der MapId zu einem gültigen Suchbegriff, 
@@ -62,7 +62,7 @@ Diese Methode ermittelt das zu den Suchbegriffen gehörenden Kartenobjekt in der
 
 \subsubsection{SearchModel}
 \paragraph*{Typ}
-Implementiert ISearchModel.
+Implementiert \texttt{ISearchModel}.
 \paragraph*{Beschreibung}
 Klasse zur Verwaltung der Daten zum Suchen von Kartenobjekten mit Hilfe eines Strings: 
 Bestimmung von Suchvorschlägen, Speicherung und Ausgabe von zuletzt gesuchten Suchbegriffen, Bestimmung der MapId zu Suchbegriffen.
