--- a/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{SearchScreen}
 \paragraph*{Typ}
-Composable.
+\texttt{Composable}.
 \paragraph*{Beschreibung}
 Diese Klasse ermöglicht die Eingabe eines Suchbegriffs in ein Textfeld durch den Benutzer, 
 die Anzeige einer Liste von Suchvorschlägen und die Auswahl eines Vorschlages durch den Benutzer, 
