--- a/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{ISignInController}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Stellt Daten für das Anzeigen der Anmeldung bereit und verarbeitet die Interaktionen.
 
@@ -46,7 +46,7 @@ Der Aufruf wird an das Model weitergegeben.
 %----------------------------------------------------------
 \subsubsection{SignInController}
 \paragraph*{Typ}
-Implementiert ISignInController.
+Implementiert \texttt{ISignInController}.
 \paragraph*{Beschreibung}
 Stellt Daten für das Anzeigen der Anmeldung bereit und verarbeitet die Interaktionen.\\
 Besitzt für die Datenbeschaffung und die Ausführung der Anmeldung einen SignInModel.
