--- a/Kapitel/02_App/06_Signup/Klassen/SignInModel/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/SignInModel/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{ISignInModel}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Dieses Interface stellt die Daten zur Anmeldung bereit und führt die Anmeldung aus.
 
@@ -29,6 +29,6 @@ Dem Server wird die Anmeldung mitgeteilt. Der Server sendet eine UserId für den
 %-------------------------------------------------
 \subsubsection{SignInModel}
 \paragraph*{Typ}
-Implementiert ISignInModel.
+Implementiert \texttt{ISignInModel}.
 \paragraph*{Beschreibung}
 Diese Klasse stellt die Daten zur Anmeldung bereit und führt die Anmeldung aus.
