--- a/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
@@ -1,8 +1,8 @@
 \subsubsection{SignInScreen}
 \paragraph*{Typ}
-Composable.
+\texttt{Composable}.
 \paragraph*{Beschreibung}
-Dieses Composable zeigt die Anmeldung an.\\
+Dieses \texttt{Composable} zeigt die Anmeldung an.\\
 Diese Klasse besitzt zum Erhalt der Daten und zur Ausführung der Interaktionen einen ISignInController.
 
 \paragraph*{Aufbau}
