--- a/Kapitel/02_App/07_Settings/Klassen/SettingsController/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{ISettingsController}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Dieses Interface bietet eine Schnittstelle für die Verwaltung der Einstellungen.
 
@@ -77,7 +77,7 @@ Keine.
 %----------------------------------------------------------
 \subsubsection{SettingsController}
 \paragraph*{Typ}
-Implementiert ISettingsController.
+Implementiert \texttt{ISettingsController}.
 \paragraph*{Beschreibung}
 Diese Klasse dient der Verwaltung der Einstellungen im ViewModel. \\
 Zur Durchführung der Änderungen an den Einstellungen und zum Erhalt der Daten benutzt der SettingsController ein ISettingsModel.
