--- a/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
@@ -1,8 +1,8 @@
 \subsubsection{SettingsScreen}
 \paragraph*{Typ}
-Composable.
+\texttt{Composable}.
 \paragraph*{Beschreibung}
-Dieses Composable zeigt die Einstellungen an. 
+Dieses \texttt{Composable} zeigt die Einstellungen an. 
 Der Benutzer kann die Einstellungen durch Interaktion mit dem SettingsScreen festlegen und ändern.\\
 Der SettingsScreen besitzt einen ISettingsController, der die Daten bereitstellt und die Änderungen an den Einstellungen durchführt. 
 
