--- a/Kapitel/02_App/09_DataManagement/DataUpdateController/main.tex
+++ b/Kapitel/02_App/09_DataManagement/DataUpdateController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{IDataUpdateController}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Ein DataUpdateController aktualisiert die lokale Datenbank. Das Aktualisieren geschieht im 
 Hintergrund. Daher wird er parallel zur eigentlichen Programmausführung aufgerufen.\\
@@ -43,7 +43,7 @@ Keine.
 %---------------------------------------------------------
 \subsubsection{DataUpdateController}
 \paragraph*{Typ}
-Implementiert IDataUpdateController.
+Implementiert \texttt{IDataUpdateController}.
 \paragraph*{Beschreibung}
 Diese Klasse implementiert einen IDataUpdateController.\\
 Die Liste an zu aktualisierenden DataUpdatern enthält einen GlobalAliasUpdater.
