--- a/Kapitel/02_App/09_DataManagement/DataUpdater/main.tex
+++ b/Kapitel/02_App/09_DataManagement/DataUpdater/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{DataUpdater}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Ein DataUpdater aktualisiert lokal gespeicherte Daten durch Kommunikation mit dem Server.\\
 Ein DataUpdater hat eine Priorität, mit der er ausgeführt werden soll. Dabei müssen 
@@ -38,7 +38,7 @@ Keine.
 %-----------------------------------------------
 \subsubsection{GlobalAliasUpdater}
 \paragraph*{Typ}
-Implementiert DataUpdater.
+Implementiert \texttt{DataUpdater}.
 \paragraph*{Beschreibung}
 Der GlobalAliasUpdater ist ein DataUpdater. Er aktualisiert die lokale Kopie der globalen
 Alias-Datenbank des Servers. \\
