--- a/Kapitel/02_App/03_Map/02_ViewModel/BuildingModeController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/BuildingModeController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{BuildingModeController}
 \paragraph*{Typ}
-Implementiert MapLayerDataController.
+Implementiert \texttt{MapLayerDataController}.
 \paragraph*{Beschreibung}
 Diese Klasse steuert die Gebäudeebene auf der Karte. Sie stellt alle benötigten Daten bereit, um die Gebäude anzuzeigen. 
 Sie stellt alle benötigten Aufrufe bereit, um Interaktionen mit Gebäuden zu verarbeiten.\\
