--- a/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{MapController}
 \paragraph*{Typ}
-Implementiert MapDisplayDataProvider.
+Implementiert \texttt{MapDisplayDataProvider}.
 \paragraph*{Beschreibung}
 Diese Klasse steuert die Karte im Allgemeinen. Das heißt: Diese Klasse stellt die Karte (Straßenkarte) bereit 
 und stellt die benötigten Daten zum Verschieben der Karte bereit (wie Position zu der sie verschoben werden soll).\\
