--- a/Kapitel/02_App/07_Settings/Klassen/ISettingsModel/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/ISettingsModel/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{ISettingsModel}
 \paragraph*{Typ}
-Interface.
+\texttt{Interface}.
 \paragraph*{Beschreibung}
 Dieses Interface bietet eine Schnittstelle für die Durchführung von Änderungen an den Einstellungen der App.
 
@@ -77,6 +77,6 @@ Keine.
 %----------------------------------------------------------
 \subsubsection{SettingsModel}
 \paragraph*{Typ}
-Implementiert ISettingsModel.
+Implementiert \texttt{ISettingsModel}.
 \paragraph*{Beschreibung}
 Diese Klasse dient der Durchführung von Änderungen an den Einstellungen der App.
