--- a/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentScreen/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentScreen/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{DocumentScreen}
 \paragraph*{Typ}
-Composable.
+\texttt{Composable}.
 \paragraph*{Beschreibung}
 Klasse zum Anzeigen eines Textdokuments im Markdown-Format.\\
 Diese Klasse nutzt die Funktionalität einer Markdown-Library.\\
