Even more formatting

--- a/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
@@ -44,11 +44,11 @@ Keine.
 \subsubsection*{Weitere private Funktionalität}%$$$M
 Beobachtete Daten von LevelChangeController und Funktionalität:
 \begin{itemize}
-    \item isHighestLevel: Wird die oberste Etage angezeigt, wird der Button nach oben ausgegraut 
+    \item \texttt{isHighestLevel}: Wird die oberste Etage angezeigt, wird der Button nach oben ausgegraut 
     und hat keine Funktion. Wird nicht die oberste Etage angezeigt, ist er nicht ausgegraut und funktioniert.
-    \item isLowestLevel: Wird die unterste Etage angezeigt, wird der Button nach unten ausgegraut 
+    \item \texttt{isLowestLevel}: Wird die unterste Etage angezeigt, wird der Button nach unten ausgegraut 
     und hat keine Funktion. Wird nicht die unterste Etage angezeigt, ist er nicht ausgegraut und funktioniert.
-    \item getLevel: Ändert sich die Etage, wird die Anzeige der aktuellen Etage aktualisiert.
-    \item isLevelMode: Befindet sich die Karte nicht im Etagenmodus, wird die ganze Schaltfläche ausgeblendet.
+    \item \texttt{getLevel}: Ändert sich die Etage, wird die Anzeige der aktuellen Etage aktualisiert.
+    \item \texttt{isLevelMode}: Befindet sich die Karte nicht im Etagenmodus, wird die ganze Schaltfläche ausgeblendet.
     Befindet sich die Karte im Etagenmodus, wird die Schaltfläche angezeigt.
 \end{itemize}
