--- a/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
@@ -61,16 +61,16 @@ Um dieses Verhalten zu ermöglichen, muss dafür gesorgt werden, dass die letzte
 der App gespeichert wird.\\
 Ist die App geöffnet und der Benutzer kehrt aus einer anderen Ansicht in die Kartenansicht zurück,
 wird die letzte Position angezeigt, sofern nicht eine bestimmte Position angezeigt werden muss 
-(siehe Beobachtete Daten: getFocusedPos).
+(siehe Beobachtete Daten: \texttt{getFocusedPos}).
 
 \paragraph*{Beobachtete Daten}
 Dieses \texttt{Composable} beobachtet einen MapDisplayDataProvider. 
 Eine Änderung der Daten wirkt sich wie folgt aus:
 \begin{itemize}
-    \item getTileSource: Die Karte, die von der MapView angezeigt wird, wird mit den neuen 
+    \item \texttt{getTileSource}: Die Karte, die von der MapView angezeigt wird, wird mit den neuen 
     Kartendaten aktualisiert.
-    \item getFocusedPos: Die neue fokussierte Position wird mittig auf der Karte angezeigt.
-    \item getRoomError: Ist der übergebene Wert nicht \texttt{null}, werden die Fehlerinformationen 
+    \item \texttt{getFocusedPos}: Die neue fokussierte Position wird mittig auf der Karte angezeigt.
+    \item \texttt{getRoomError}: Ist der übergebene Wert nicht \texttt{null}, werden die Fehlerinformationen 
     in einer Meldung über allen anderen Elementen angezeigt.
 \end{itemize}
 
