--- a/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
@@ -3,9 +3,9 @@
 \texttt{Composable}.
 \paragraph*{Beschreibung}
 Dieses \texttt{Composable} zeigt Informationen zum ausgewählten Kartenobjekt an.\\
-Es gibt zwei verschiedene Anzeigemodi:
+Es gibt zwei verschiedene Anzeigemodi.
 
-\subparagraph*{Kompakte Anzeige}
+\paragraph*{Kompakte Anzeige}
 Wird das MapObjectInfoDisplay geöffnet, wird es nur in der unteren Bildschirmhälfte angezeigt. 
 Es werden nur die wichtigsten Informationen angezeigt. Es wird nach Typ des Kartenobjekts unterschieden:
 \begin{itemize}
@@ -14,7 +14,7 @@ Es werden nur die wichtigsten Informationen angezeigt. Es wird nach Typ des Kart
 \end{itemize}
 Rechts unten wird ein Button zum Wechsel in die ausführliche Anzeige angezeigt.
 
-\subparagraph*{Ausführliche Anzeige}
+\paragraph*{Ausführliche Anzeige}
 Die ausführliche Anzeige bedeckt den ganzen Bildschirm.
 Es wird folgendes angezeigt:
 \begin{itemize}
@@ -80,7 +80,7 @@ Es gibt drei Möglichkeiten, von der ausführlichen in die kompakte Anzeige zu w
 In allen Fällen gibt es die gleiche Animation beim Wechseln: Die ausführliche Anzeige wird immer 
 kleiner, bis sie so hoch ist wie die kompakte Anzeige. Danach befindet sie sich in der kompakten Anzeige.
 
-\subparagraph*{Schließen der kompakte Anzeige}
+\subparagraph*{Schließen der kompakten Anzeige}
 Es gibt zwei Möglichkeiten die kompakte Anzeige zu schließen:
 \begin{itemize}
     \item Der Benutzer betätigt die Zurück-Taste (des Endgeräts).
