--- a/Kapitel/00_Backend/Security/SecurityConfig/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/SecurityConfig/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Konfigurationsklasse, die die Verifiziererkomponente zur Validiereung der Access-Token in JWTFilter ermöglicht.
+Konfigurationsklasse, die die Verifiziererkomponente zur Validierung der Access-Token in JWTFilter ermöglicht.
 \paragraph*{Beschreibung}
 Definiert den Algorithmus und mit diesem und dem Tokensecret aus \dq SecurityProperties\dq{} die Verifizierungskomponente.
 \paragraph*{Methoden}
