Change 'boolean' to 'Boolean'

--- a/Kapitel/00_Backend/Models/AliasSuggestion/getVoters_IterableString/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/getVoters_IterableString/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getVoters() : List<user : String>}}%$$$M
+\paragraph*{\texttt{getVoters() : Iterable<user : String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Benutzer zurück, die den Alias-Vorschlag bewertet haben.
 \paragraph*{Beschreibung}
