--- a/Kapitel/00_Backend/Repositories/AliasRepository/deleteByName_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/deleteByName_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{deleteByName(alias : String) : boolean}}%$$$M
+\paragraph{\texttt{deleteByName(alias : String) : Boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entfernt einen Alias von der Datenbank.
 \paragraph*{Beschreibung}
