--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/deleteByNameAndID_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/deleteByNameAndID_String,int_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{deleteByNameAndID(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
+\paragraph{\texttt{deleteByNameAndID(aliasSuggestion : String, mapID : int) : Boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entfernt einen Alias-Vorschlag von der Datenbank der Alias-Vorschläge.
 \paragraph*{Beschreibung}
