--- a/Kapitel/00_Backend/Repositories/BlacklistRepository/deleteByName_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Repositories/BlacklistRepository/deleteByName_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{deleteByName(blacklistedToRem : String) : boolean}}%$$$M
+\paragraph{\texttt{deleteByName(blacklistedToRem : String) : Boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entfernt eine Zeichenkette, die in der Blacklist hinterlegt ist, von der Blacklist.
 \paragraph*{Beschreibung}
