--- a/Kapitel/00_Backend/Services/AliasService/getAlias_int,UserID_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/getAlias_int,UserID_ListAlias/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getAlias(mapID : int, user : String) : List<alias : String>}}%$$$M
+\paragraph{\texttt{getAlias(mapID : int, user : String) : Iterable<alias : String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte, zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
