--- a/Kapitel/00_Backend/Services/BlacklistService/addToBlacklist_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistService/addToBlacklist_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{addToBlacklist(toBlacklist : String) : boolean}}%$$$M
+\paragraph{\texttt{addToBlacklist(toBlacklist : String) : Boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Definiert das Erteilen der Anweisung an Klasse \texttt{BlacklistRepository}, eine Zeichenkette in die Blacklist aufzunehmen.
 \paragraph*{Beschreibung}
