--- a/Kapitel/00_Backend/Services/BlacklistServiceImp/isBlacklisted_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistServiceImp/isBlacklisted_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{isBlacklisted(word : String) : boolean}}%$$$M
+\paragraph{\texttt{isBlacklisted(word : String) : Boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Überprüft, ob eine Zeichenkette in der Blacklist aufgenommen ist.
 \paragraph*{Beschreibung}
